workspace = { members = ["./src/app"] }

[package]
name = "histogram_equalization"
version = "0.1.9"
edition = "2021"
description = "Histogram equalization"
readme = "README.md"
keywords = ["histogram"]
license = "Apache-2.0 OR BSD-3-Clause"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/hist-equal"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/hist-equal"
repository = "https://github.com/awxkee/hist-equal"
exclude = ["*.jpg", "assets/*"]

[features]
nightly_avx512 = ["yuvutils-rs/nightly_avx512"]

[dependencies]
colorutils-rs = "0.5.4"
num-traits = "0.2.19"
yuvutils-rs = "0.4.2"
