workspace = { members = ["./src/app"] }

[package]
name = "histogram_equalization"
version = "0.2.1"
edition = "2021"
description = "Histogram equalization"
readme = "README.md"
keywords = ["histogram"]
license = "BSD-3-Clause OR Apache-2.0"
authors = ["Radzivon Bartoshyk"]
documentation = "https://github.com/awxkee/histogram_equalization"
categories = ["multimedia::images", "multimedia::video"]
homepage = "https://github.com/awxkee/histogram_equalization"
repository = "https://github.com/awxkee/histogram_equalization"
exclude = ["*.jpg", "assets/*"]

[features]
nightly_avx512 = ["yuvutils-rs/nightly_avx512"]

[dependencies]
colorutils-rs = "0.7.0"
num-traits = "0.2.19"
rayon = "1.10.0"
yuvutils-rs = "0.4.7"
